<resources>
    <string name="app_name">蓝洋传媒</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_des_call_background">服务背景</string>
    <string name="call">服务</string>
    <string name="login_setting_background">登陆后台背景图</string>
    <string name="login">登陆</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_restaurant">选择餐厅</string>
    <string name="search">搜索</string>
    <string name="filter">筛选</string>
    <string name="info_config">已配桌号</string>
    <string name="info_config_title">信息配置</string>
    <string name="no_data_now">暂无内容</string>
    <string name="restaurant_name">餐厅名称</string>
    <string name="devices_num">设备编号</string>
    <string name="config_table_num">配置桌号</string>
    <string name="bind_device">绑定</string>
    <string name="show_picture">展示图片</string>

    <string name="need_save_setting">当前App需要申请存储权限,需要打开设置页面么?</string>
    <string name="request_permissions">需要请求内存卡权限</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
</resources>
