<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.RestaurantConfigActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/title_bar_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/back_arow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/info_config_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/choose_restaurant"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ececec"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/edit_search_background">

                            <EditText
                                android:id="@+id/editSearch"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="20dp"
                                android:background="@null"
                                android:drawableLeft="@drawable/icon_search"
                                android:drawablePadding="5dp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/btnSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/search_btn_background"
                            android:gravity="center"
                            android:text="@string/search"
                            android:textColor="@android:color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/btnFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/filter_btn_background"
                            android:gravity="center"
                            android:text="@string/filter"
                            android:textColor="@android:color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycleView_restaurant"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="none" />

                        <TextView
                            android:id="@+id/noRestaurant"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="没有餐厅!"
                            android:textColor="#666"
                            android:textSize="22sp" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#ececec" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/info_config"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="440dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycleView_table_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#b7d8fb"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:scrollbars="none" />

                    <TextView
                        android:id="@+id/tv_table_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/no_data_now"
                        android:textColor="#999999"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:background="#ececec" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:text="@string/restaurant_name"
                        android:textColor="#666666"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/res_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text="外婆印象店" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:text="@string/devices_num"
                        android:textColor="#666666"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/input_background"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/editDeviceNum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:textColor="#999999"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:text="@string/config_table_num"
                        android:textColor="#666666"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/input_background"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTableNum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:inputType="text"
                            android:paddingLeft="10dp"
                            android:textColor="#999999"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btnBind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/btn_login"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/bind_device"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>
